--- a/17-Advanced Python Objects and Data Structures/Excercise And Notes/04-Advanced Dictionaries.ipynb
+++ b/17-Advanced Python Objects and Data Structures/Excercise And Notes/04-Advanced Dictionaries.ipynb
@@ -33,6 +33,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    ###### this is the sample for dictionary comprehension:\n",
+    "    ######################\n",
+    "    x = { number for number in range(10)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -352,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.4"
   }
  },
  "nbformat": 4,
