--- a/Templates.ipynb
+++ b/Templates.ipynb
@@ -3,20 +3,24 @@
   {
    "cell_type": "markdown",
    "id": "imported-patch",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "rental-astrology",
+   "metadata": {},
+   "source": [
+    "    # <span style='color:DarkCyan'> Simple Color heading DarkCyan. </span>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "proved-frontier",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "    # <span style='color:DarkCyan'> Simple Color heading DarkCyan. </span>"
